# mastery-ai-framework

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  REPOSITORY_STATUS.md  SECURITY.md  mcp-integration-plan.md  progress.md  project-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Ideation/: Pillar A - Authority & Trust Signals.md  Pillar AI - AI Response Optimization & Citation.md  Pillar E - Engagement & User Experience.md  Pillar M - Machine Readability & Technical Infrastructure.md  Pillar R - Reference Networks & Citation Optimization.md  Pillar S - Semantic Content Quality.md  Pillar T - Topical Expertise.md  Pillar Y - Yield Optimization & Performance Analytics.md  Product Requirements Document: AI Mastery Framework Library.md  The MASTERY-AI Framework v3.1.1 250703.md  The MASTERY-AI Framework v3.2 250920.md  schema_v3_1_1_validation.py
examples/: quickstart.py
mastery_ai/: __init__.py  __version__.py
mastery_ai/core/: __init__.py  assessment_engine.py  config.py  schema.py  scoring.py
mastery_ai/pillars/: __init__.py  ai_response.py  authority.py  base.py  engagement.py  machine.py  reference.py  semantic.py  topical.py  yield_opt.py
missions/: mission-build.md  mission-fix.md
